dashboard/openshift/poc/dashboard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: winc-dashboard-poc
  labels:
    app: winc-dashboard-poc
  annotations:
    haproxy.router.openshift.io/timeout: 90s
spec:
  to:
    kind: Service
    name: winc-dashboard-poc
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
